# otif-risk-intelligence

./: .env.example  .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
docs/: demo-script.md  model-card.md  otif-system-guide.html  setup.md  system-walkthrough.html
docs/architecture/: current.mmd  diagrams.py  generate.py  target.mmd
src/otif_pdf/: __init__.py  app.py  bayesian.py  contracts.py  data.py  decisions.py  evaluation.py  explain.py  features.py  feedback.py  fusion.py  model.py  narratives.py  pipeline.py  root_causes.py  validation.py
src/otif_risk/: __init__.py  action_response.py  adapters.py  app.py  bayesian.py  benchmark.py  contracts.py  copilot_audit.py  copilot_context.py  copilot_evaluation.py  copilot_fallback.py  copilot_validation.py  data.py  decision_ledger.py  decisions.py  drift.py  evaluation.py  explain.py  features.py  fusion.py  line_evidence.py  llm_copilot.py  manifest.py  model.py  monitoring.py  narratives.py  operations.py  pipeline.py  policy_benchmark.py  policy_evaluation.py  registry.py  resources.py  root_causes.py  service_contracts.py  validation.py
tests/: test_action_response.py  test_adapters.py  test_app.py  test_bayesian.py  test_benchmark.py  test_data.py  test_decision_ledger.py  test_decisions.py  test_drift.py  test_evaluation.py  test_features.py  test_feedback.py  test_fusion.py  test_line_evidence.py  test_manifest.py  test_model.py  test_monitoring.py  test_narratives.py  test_operations.py  test_pipeline.py  test_policy_benchmark.py  test_policy_evaluation.py  test_registry.py  test_resources.py  test_root_causes.py
